# EthernalEngine

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
src/Rendering/: Shader.cpp  Shader.h
src/Rendering/Images/: Texture.cpp  Texture.h
src/Rendering/Shaders/: main.fsh  main.vsh
